# MirrorKey

./: .coverage  .gitignore  Dockerfile  README.md  mirrorkey.yml  pyproject.toml
.github/workflows/: build.yml  test.yml
mirror_key/: __init__.py  main.py
mirror_key/core/: api.py
mirror_key/core/config/: structure.py
mirror_key/custom_plugins/bws_cache_generic/: __init__.py  main.py
mirror_key/plugins/bws_cache/: main.py
mirror_key/plugins/secrets/: __init__.py  main.py
mirror_key/tests/core/: test_plugins.py
mirror_key/tests/core/config/: test_config.py
server/: mirrorkey.yml  server.py
server/apis/gsecret/: __init__.py  api.py
server/core/: __init__.py  config.py  importer.py  plugins.py  structure.py
server/core/api/: builder.py  manager.py  plugin.py
server/core/chain/: chain.py  controller.py
server/core/config/: loader.py  schema.py
server/core/interface/: main.py
server/core/tests/: test_importer.py
server/core/tests/api/: test_builder.py  test_manager.py  test_plugin.py
server/core/tests/chain/: test_chain.py  test_controller.py
server/core/tests/config/: test_loader.py  test_schema.py
server/core/tests/interface/: test_main.py
server/interfaces/gsecret/: __init__.py  interface.py
server/plugins/bws_secret/: api.py  client.py  middleware.py
server/plugins/bws_secret/bws_client/: client.py
server/plugins/gsecret/: __init__.py  api.py  client.py  middleware.py  requests.py  responses.py
server/stages/gsecret/bws_read/: __init__.py  client_controller.py  main.py
server/stages/gsecret/bws_write/: __init__.py  main.py  (+1 more)
(+10 files in other folders)
